<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">易农</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- 主界面 -->
    <string name="shouye">首页</string>
    <string name="kuaixun">快讯</string>
    <string name="sercice">服务</string>
    <string name="yonghu">用户</string>

    <!-- 我的 -->
    <string name="m_friend_cir">朋友圈</string>
    <string name="m_near">附近的人</string>
    <string name="m_messa">个人信息</string>
    <string name="m_set">我的设置</string>
    <string name="m_farm">我的农场</string>
    <string name="m_album">我的相册</string>
    <string name="m_collect">我的收藏</string>
    <string name="m_exit">退出</string>
    <string name="pinfo_sigin">个性签名:</string>
    <string name="pinfo_address">地区:</string>
    <string name="pinfo_cellnum">电话号码:</string>
	<string name="m_village">我的村团</string>
    <string name="m_message">我的消息</string>
    
    <!-- 信息 -->
    <string name="hot_info">热点</string>
    <string name="supermarket">市场</string>
    <string name="economic">经济</string>
    <string name="social">社会</string>
    <string name="agr_products">农产品</string>
    <string name="title_activity_argproduct">ArgproductActivity</string>
	
       <string name="back">返回</string>
       
       
</resources>
