<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:zhy="http://schemas.android.com/apk/res/com.gzqilin.weimi"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v4.view.ViewPager
            android:id="@+id/id_viewpager"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
    </android.support.v4.view.ViewPager>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/tabbg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

        <com.gzqilin.weimi.view.ChangeColorIconWithTextView
                android:id="@+id/id_indicator_one"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:padding="5dp"
                zhy:icon="@drawable/weimi_normal"
                zhy:text="@string/shouye"
                zhy:text_size="12sp"/>

        <com.gzqilin.weimi.view.ChangeColorIconWithTextView
                android:id="@+id/id_indicator_two"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:padding="5dp"
                zhy:icon="@drawable/call_narmal"
                zhy:text="@string/kuaixun"
                zhy:text_size="12sp"/>

        <com.gzqilin.weimi.view.ChangeColorIconWithTextView
                android:id="@+id/id_indicator_three"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:padding="5dp"
                zhy:icon="@drawable/service_normal"
                zhy:text="@string/sercice"
                zhy:text_size="12sp"/>

        <com.gzqilin.weimi.view.ChangeColorIconWithTextView
                android:id="@+id/id_indicator_four"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:padding="5dp"
                zhy:icon="@drawable/mine_normal"
                zhy:text="@string/yonghu"
                zhy:text_size="12sp"/>
    </LinearLayout>

</LinearLayout>